k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ims-backend
  namespace: inventory-system
  labels:
    app: ims-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ims-backend
  template:
    metadata:
      labels:
        app: ims-backend
    spec:
      containers:
        - name: backend
          image: dharunr257/inventory-backend:acff2dd13d13b3070607731b43c7755d2815f447
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: api
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
