k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ims-frontend
  namespace: inventory-system
  labels:
    app: ims-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ims-frontend
  template:
    metadata:
      labels:
        app: ims-frontend
    spec:
      containers:
        - name: frontend
          image: <dockerhub-username>/inventory-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
