k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ims-backend-service
  namespace: inventory-system
  labels:
    app: ims-backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: api
  selector:
    app: ims-backend
  type: ClusterIP
