k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: ims-db-service
  namespace: inventory-system
  labels:
    app: ims-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: ims-db
  type: ClusterIP
