k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ims-frontend-service
  namespace: inventory-system
  labels:
    app: ims-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: ims-frontend
  type: ClusterIP
